first_ec2.tf
provider "aws" {
    region  = "us-west-2"
    profile = my_acc
}

resource "aws_vpc" "main" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "main"
  }
}
